fixed brand image alignment, missing responsive peice.

--- a/wedme/subtheme/static/css/bootstrap.css
+++ b/wedme/subtheme/static/css/bootstrap.css
@@ -3950,7 +3950,6 @@ input[type="submit"].btn.btn-mini {
 }
 
 .brand {
-    background: url("/static/media/uploads/i/mo.png") no-repeat scroll center center transparent;
     height: 75px;
     margin-left: auto;
     margin-right: auto;
@@ -3958,7 +3957,20 @@ input[type="submit"].btn.btn-mini {
     top: 0;
     width: 940px;
     z-index: 1060;
+    max-height: 1em;
 }
+.brandimg {
+    /*
+    background: url("/static/media/uploads/i/mo.png") no-repeat scroll center center transparent; */
+
+   box-shadow: none;
+    display: block;
+    max-width: 75px;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 1060;
+    }
+
 .nav {
   margin-bottom: 21px;
   margin-left: 0;
